# JpegturboCmake

./: CMakeLists.txt  README.md
Sources/: CMakeLists.txt
Sources/HelloWorldCore/: CMakeLists.txt  HelloWorldCore.swift
Sources/ImageOps/: CMakeLists.txt  ImageOps.c  ImageOps.h  ImageOps.swift  ImageOpsMacros.h  module.modulemap
Sources/JPEG/: CMakeLists.txt  JPEG.swift
